# I-Drone

./: .dockerignore  .gitignore  README.md  meson.build  meson_drone.build  sonar-project.properties
.github/workflows/: sonarcloud.yml
Algorithm/: meson.build
Algorithm/src/: Algorithm_Manager.cpp  Algorithm_Manager.h  Algorithm_Manager_Interface.cpp  Algorithm_Manager_Interface.h  Algorithm_Recorder.cpp  Algorithm_Recorder.h  Communication_Manager.cpp  Communication_Manager.h  Config.h  Path_Cal.cpp  Path_Cal.h  Signal_Cal.cpp  Signal_Cal.h  config.h  main.cpp
Client/config/: mission_config.yml  mission_config_example.yml
Client/proto_bindings/: messages_drone_pb2.py  messages_planner_pb2.py  messages_pld_pb2.py
Client/src/: Client.py  Communication_Manager.py  Config.py  Encoder_Decoder.py
Docker/: .env.drone  Dockerfile  docker-compose.yml  docker_compose_Algorithm_Server.yml  entrypoint-pld.sh
Docker/Client/: Dockerfile
Docker/Sim/: Dockerfile  add_camera_to_sdf.py  force_gazebo_play.sh  generate_iris_sdf.sh  multi_drone.world  playback_gazebo.sh  prepare_terrain_world.py  start_gazebo.sh  start_gazebo_gui.sh
Drone/: meson.build
Drone/src/: Communication_Manager.cpp  Communication_Manager.h  Config.h  Controller.cpp  Controller.h  Drone_Recorder.cpp  Drone_Recorder.h  Engine.cpp  Engine.h  Gazebo_Cleaner.cpp  Gazebo_Cleaner.h  Multi_Drone_Manager.cpp  Multi_Drone_Manager.h  PX4_Drone_Recorder.cpp  PX4_Drone_Recorder.h  PX4_Wrapper.cpp  PX4_Wrapper.h  Simulation_Cleaner.h  main.cpp
PLD/: meson.build
PLD/src/: Communication_Manager.cpp  Communication_Manager.h  Config.h  Docker_Manager.cpp  Docker_Manager.h  PLD_Recorder.cpp  PLD_Recorder.h  SSH_Manager.cpp  SSH_Manager.h  State_Machine.cpp  State_Machine.h  main.cpp
PLD/src/states/: Drone_Mission_State.cpp  Drone_Mission_State.h  Off_State.cpp  Off_State.h  Planner_State.cpp  Planner_State.h  State.cpp  State.h
Planner/: meson.build
Planner/src/: Communication_Manager.cpp  Communication_Manager.h  Config.h  Path_Cal.cpp  Path_Cal.h  Planner_Manager.cpp  Planner_Manager.h  Planner_Manager_Interface.cpp  Planner_Manager_Interface.h  Planner_Recorder.cpp  Planner_Recorder.h  Signal_Cal.cpp  Signal_Cal.h  main.cpp
RSC/: meson.build
RSC/src/: Client.py
libs/: meson.build
libs/common_libs/: Docker_Manager.cpp  Docker_Manager.h  Enc_Dec_Algo.cpp  Enc_Dec_Algo.h  Enc_Dec_Drone.cpp  Enc_Dec_Drone.h  Enc_Dec_Msg.cpp  Enc_Dec_Msg.h  Enc_Dec_PLD.cpp  Enc_Dec_PLD.h  Enc_Dec_Planner.cpp  Enc_Dec_Planner.h  Logger.cpp  Logger.h  Recorder.cpp  Recorder.h  SSH_Manager.cpp  SSH_Manager.h  Server.cpp  Server.h  Signal_Handler.cpp  Signal_Handler.h  logger.cpp  logger.h  recorder.cpp  recorder.h
libs/generated_proto/: messages.pb.cc  messages.pb.h  messages_algo.pb.cc  messages_algo.pb.h  messages_drone.pb.cc  messages_drone.pb.h  messages_planner.pb.cc  messages_planner.pb.h  messages_pld.pb.cc  messages_pld.pb.h  test.pb.cc  test.pb.h
libs/proto/: messages.proto  messages_algo.proto  messages_drone.proto  messages_planner.proto  messages_pld.proto  test.proto
libs/structs/: Structs_Algo.cpp  Structs_Algo.h  Structs_Drone.cpp  Structs_Drone.h  Structs_PLD.cpp  Structs_PLD.h  Structs_Planner.cpp  Structs_Planner.h
